--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,7 @@ body {
     -webkit-transition: none !important;
     -moz-transition: none !important;
     -ms-transition: none !important;
-    -o-transition: none !important;
+    transition: none !important;
 }
 
 .credit-card svg#card-front,
