--- a/styles.css
+++ b/styles.css
@@ -1,356 +1,356 @@
 body {
-    margin: 0;
-    padding: 0;
-    background-image: url('./background-image.png');
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-line-pack: center;
-    align-content: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    min-height: 100vh;
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
-    font-family: 'Raleway';
+  margin: 0;
+  padding: 0;
+  background-image: url("images/background-image.png");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-line-pack: center;
+  align-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  min-height: 100vh;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  font-family: "Raleway";
 }
 
 .title {
-    width: 100%;
-    text-align: center;
-    color: wheat;
+  width: 100%;
+  text-align: center;
+  color: wheat;
 }
 
 .card-container {
-    width: 100%;
-    max-width: 400px;
-    max-height: 251px;
-    height: 54vw;
-    padding: 20px;
+  width: 100%;
+  max-width: 400px;
+  max-height: 251px;
+  height: 54vw;
+  padding: 20px;
 }
 
 .card-container {
-    perspective: 1000px;
+  perspective: 1000px;
 }
 
 .preloading * {
-    -webkit-transition: none !important;
-    -moz-transition: none !important;
-    -ms-transition: none !important;
-    transition: none !important;
+  -webkit-transition: none !important;
+  -moz-transition: none !important;
+  -ms-transition: none !important;
+  transition: none !important;
 }
 
 .credit-card svg#card-front,
 .credit-card svg#card-back {
-    width: 100%;
-    -webkit-box-shadow: 1px 5px 6px 0px black;
-    box-shadow: 1px 5px 6px 0px black;
-    border-radius: 22px;
+  width: 100%;
+  -webkit-box-shadow: 1px 5px 6px 0px black;
+  box-shadow: 1px 5px 6px 0px black;
+  border-radius: 22px;
 }
 
 .credit-card .lightcolor,
 .credit-card .darkcolor {
-    -webkit-transition: fill .5s;
-    transition: fill .5s;
+  -webkit-transition: fill 0.5s;
+  transition: fill 0.5s;
 }
 
 .credit-card .lightblue {
-    fill: #39f2ffac;
+  fill: #39f2ffac;
 }
 
 .credit-card .lightbluedark {
-    fill: #01283d;
+  fill: #01283d;
 }
 
 .credit-card .red {
-    fill: #ffa9a8;
+  fill: #ffa9a8;
 }
 
 .credit-card .reddark {
-    fill: #5e1010;
+  fill: #5e1010;
 }
 
 .credit-card .purple {
-    fill: #ef92ff;
+  fill: #ef92ff;
 }
 
 .credit-card .purpledark {
-    fill: #46135d;
+  fill: #46135d;
 }
 
 .credit-card .cyan {
-    fill: #78efff;
+  fill: #78efff;
 }
 
 .credit-card .cyandark {
-    fill: #083034;
+  fill: #083034;
 }
 
 .credit-card .green {
-    fill: #75ff7c;
+  fill: #75ff7c;
 }
 
 .credit-card .greendark {
-    fill: #093e0c;
+  fill: #093e0c;
 }
 
 .credit-card .lime {
-    fill: #f2ff7d;
+  fill: #f2ff7d;
 }
 
 .credit-card .limedark {
-    fill: #41430c;
+  fill: #41430c;
 }
 
 .credit-card .yellow {
-    fill: #fff599;
+  fill: #fff599;
 }
 
 .credit-card .yellowdark {
-    fill: #714f17;
+  fill: #714f17;
 }
 
 .credit-card .orange {
-    fill: #ffb648;
+  fill: #ffb648;
 }
 
 .credit-card .orangedark {
-    fill: #6c3910;
+  fill: #6c3910;
 }
 
 .credit-card .grey {
-    fill: #a8a3a3;
+  fill: #a8a3a3;
 }
 
 .credit-card .greydark {
-    fill: #2c2c2c;
+  fill: #2c2c2c;
 }
 
 .credit-card {
-    width: 100%;
-    max-width: 400px;
-    -webkit-transform-style: preserve-3d;
-    transform-style: preserve-3d;
-    transition: -webkit-transform 0.6s;
-    -webkit-transition: -webkit-transform 0.6s;
-    transition: transform 0.6s;
-    transition: transform 0.6s, -webkit-transform 0.6s;
-    cursor: pointer;
+  width: 100%;
+  max-width: 400px;
+  -webkit-transform-style: preserve-3d;
+  transform-style: preserve-3d;
+  transition: -webkit-transform 0.6s;
+  -webkit-transition: -webkit-transform 0.6s;
+  transition: transform 0.6s;
+  transition: transform 0.6s, -webkit-transform 0.6s;
+  cursor: pointer;
 }
 
 .credit-card .front-card,
 .credit-card .back-card {
-    position: absolute;
-    width: 100%;
-    max-width: 400px;
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-    -webkit-font-smoothing: antialiased;
-    color: #47525d;
+  position: absolute;
+  width: 100%;
+  max-width: 400px;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  -webkit-font-smoothing: antialiased;
+  color: #47525d;
 }
 
 .credit-card .back-card {
-    -webkit-transform: rotateY(180deg);
-    transform: rotateY(180deg);
+  -webkit-transform: rotateY(180deg);
+  transform: rotateY(180deg);
 }
 
 .credit-card.flipped {
-    -webkit-transform: rotateY(180deg);
-    transform: rotateY(180deg);
+  -webkit-transform: rotateY(180deg);
+  transform: rotateY(180deg);
 }
 
 #credit-card-single {
-    position: absolute;
-    right: 15px;
-    top: 20px;
+  position: absolute;
+  right: 15px;
+  top: 20px;
 }
 
 #credit-card-single svg {
-    width: 100px;
-    max-height: 60px;
+  width: 100px;
+  max-height: 60px;
 }
 
 #card-front .st2 {
-    fill: #FFFFFF;
+  fill: #ffffff;
 }
 
 #card-front .st3 {
-    font-family: 'Source Code Pro', monospace;
-    font-weight: 600;
+  font-family: "Source Code Pro", monospace;
+  font-weight: 600;
 }
 
 #card-front .st4 {
-    font-size: 54.7817px;
+  font-size: 54.7817px;
 }
 
 #card-front .st5 {
-    font-family: 'Source Code Pro', monospace;
-    font-weight: 400;
+  font-family: "Source Code Pro", monospace;
+  font-weight: 400;
 }
 
 #card-front .st6 {
-    font-size: 33.1112px;
+  font-size: 33.1112px;
 }
 
 #card-front .st7 {
-    opacity: 0.6;
-    fill: #FFFFFF;
+  opacity: 0.6;
+  fill: #ffffff;
 }
 
 #card-front .st8 {
-    font-size: 24px;
+  font-size: 24px;
 }
 
 #card-front .st9 {
-    font-size: 36.5498px;
+  font-size: 36.5498px;
 }
 
 #card-front .st10 {
-    font-family: 'Source Code Pro', monospace;
-    font-weight: 300;
+  font-family: "Source Code Pro", monospace;
+  font-weight: 300;
 }
 
 #card-front .st11 {
-    font-size: 16.1716px;
+  font-size: 16.1716px;
 }
 
 #card-front .st12 {
-    fill: #4C4C4C;
+  fill: #4c4c4c;
 }
 
 #card-back .st0 {
-    fill: none;
-    stroke: #0F0F0F;
-    stroke-miterlimit: 10;
+  fill: none;
+  stroke: #0f0f0f;
+  stroke-miterlimit: 10;
 }
 
 #card-back .st2 {
-    fill: #111111;
+  fill: #111111;
 }
 
 #card-back .st3 {
-    fill: #F2F2F2;
+  fill: #f2f2f2;
 }
 
 #card-back .st4 {
-    fill: #D8D2DB;
+  fill: #d8d2db;
 }
 
 #card-back .st5 {
-    fill: #C4C4C4;
+  fill: #c4c4c4;
 }
 
 #card-back .st6 {
-    font-family: 'Source Code Pro', monospace;
-    font-weight: 400;
+  font-family: "Source Code Pro", monospace;
+  font-weight: 400;
 }
 
 #card-back .st7 {
-    font-size: 27px;
+  font-size: 27px;
 }
 
 #card-back .st8 {
-    opacity: 0.6;
+  opacity: 0.6;
 }
 
 #card-back .st9 {
-    fill: #FFFFFF;
+  fill: #ffffff;
 }
 
 #card-back .st10 {
-    font-size: 24px;
+  font-size: 24px;
 }
 
 #card-back .st11 {
-    fill: #EAEAEA;
+  fill: #eaeaea;
 }
 
 #card-back .st12 {
-    font-family: 'Rock Salt', cursive;
+  font-family: "Rock Salt", cursive;
 }
 
 #card-back .st13 {
-    font-size: 37.769px;
+  font-size: 37.769px;
 }
 
 .card-form-container {
-    display: grid;
-    grid-column-gap: 10px;
-    grid-template-columns: auto auto;
-    grid-template-rows: 90px 90px 90px;
-    grid-template-areas: "name name""number number""expiration security";
-    max-width: 400px;
-    padding: 20px;
-    color: #707070;
+  display: grid;
+  grid-column-gap: 10px;
+  grid-template-columns: auto auto;
+  grid-template-rows: 90px 90px 90px;
+  grid-template-areas: "name name" "number number" "expiration security";
+  max-width: 400px;
+  padding: 20px;
+  color: #707070;
 }
 
 .card-form-container .card-field-container:first-of-type {
-    grid-area: name;
+  grid-area: name;
 }
 
 .card-form-container .card-field-container:nth-of-type(2) {
-    grid-area: number;
+  grid-area: number;
 }
 
 .card-form-container .card-field-container:nth-of-type(3) {
-    grid-area: expiration;
+  grid-area: expiration;
 }
 
 .card-form-container .card-field-container:nth-of-type(4) {
-    grid-area: security;
+  grid-area: security;
 }
 
 .card-field-container input {
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 .card-field-container {
-    position: relative;
+  position: relative;
 }
 
 label {
-    padding-bottom: 5px;
-    font-size: 13px;
-    color: wheat;
+  padding-bottom: 5px;
+  font-size: 13px;
+  color: wheat;
 }
 
 input {
-    margin-top: 3px;
-    padding: 15px;
-    font-size: 16px;
-    width: 100%;
-    border-radius: 3px;
-    border: 1px solid #dcdcdc;
+  margin-top: 3px;
+  padding: 15px;
+  font-size: 16px;
+  width: 100%;
+  border-radius: 3px;
+  border: 1px solid #dcdcdc;
 }
 
 #generate-card {
-    cursor: pointer;
-    float: right;
-    font-size: 13px;
-    color: #fff;
-    padding: 2px 4px;
-    background-color: #766e6e;
-    border-radius: 4px;
-    cursor: pointer;
-    float: right;
+  cursor: pointer;
+  float: right;
+  font-size: 13px;
+  color: #fff;
+  padding: 2px 4px;
+  background-color: #766e6e;
+  border-radius: 4px;
+  cursor: pointer;
+  float: right;
 }
 
 .card-icon {
-    height: 38px;
-    position: absolute;
-    right: 6px;
-    top: calc(50% - 17px);
-    width: 60px;
+  height: 38px;
+  position: absolute;
+  right: 6px;
+  top: calc(50% - 17px);
+  width: 60px;
 }
 
 #svgname {
-    text-transform: uppercase;
+  text-transform: uppercase;
 }
